<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_lock_menu"
        style="@style/menuViewItem" />

    <View style="@style/horizontalLineView" />

    <TextView
        android:id="@+id/textview_main"
        style="@style/menuViewItem"
        android:text="@string/main" />

    <View style="@style/horizontalLineView" />

    <TextView
        android:id="@+id/textview_add"
        style="@style/menuViewItem"
        android:text="@string/add" />

    <View style="@style/horizontalLineView" />

    <TextView
        android:id="@+id/textview_exit"
        style="@style/menuViewItem"
        android:text="@string/exit" />

    <View style="@style/horizontalLineView" />

    <TextView
        android:id="@+id/textview_setting"
        style="@style/menuViewItem"
        android:text="@string/setting" />
</LinearLayout>