<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_backup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/default_string"
        android:textAppearance="?android:textAppearanceLarge" />

    <View
        style="@style/horizontalLineView"
        android:layout_margin="10dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_cipher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cipher_text" />


        <RadioButton
            android:id="@+id/radio_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_text" />

    </RadioGroup>

    <EditText
        android:id="@+id/edit_backup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password_key"
        android:visibility="gone" />

    <Button
        style="@style/positiveButton"
        android:layout_margin="10dp"
        android:onClick="backupOk"
        android:text="@string/ok" />
</LinearLayout>